# gymtracker

./: .docker.env  .dockerignore  .env  .env.docker  .gitignore  Cargo.toml  Dockerfile  Readme.md  design.md  docker-compose.dev.yml  docker-compose.yml  release.sh
gt-backend/: Cargo.toml
gt-backend/src/: db.rs  lib.rs  main.rs
gt-backend/src/api/: admin.rs  auth.rs  exercise.rs  mod.rs  user.rs
gt-backend/src/db/: exercise.rs  mod.rs  populate.rs  pr.rs  user.rs
gt-core/: Cargo.toml
gt-core/src/: auth.rs  lib.rs
gt-core/src/entities/: exercise_name.rs  exercise_set.rs  login_user.rs  mod.rs  prelude.rs  user_info.rs  user_info_ts.rs  user_login.rs
gt-core/src/entities_backend/: exercise_name.rs  exercise_set.rs
gt-core/src/entities_frontend/: exercise_name.rs  exercise_set.rs  mod.rs  user_info.rs  user_info_ts.rs  user_login.rs
gt-core/src/models/: admin.rs  db.rs  exercise.rs  mod.rs  user.rs
gt-frontend/: Cargo.toml  build.sh  index.html  todo.md  watch.sh
gt-frontend/js/: config.js  rollup.js
gt-frontend/src/: api.rs  auth.rs  lib.rs  main.rs  messages.rs  request_ext.rs  util.rs
gt-frontend/src/components/: access_control.rs  add_exercise_set.rs  admin_page.rs  exercise_set.rs  graph_page.rs  history_page.rs  login_page.rs  main_page.rs  messages.rs  mod.rs  nav.rs  pr_page.rs  register_page.rs  stats_page.rs  user_page.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20230113_140607_create_user_table.rs  m20230113_140612_create_exercise_table.rs  m20230113_190450_asd.rs  m20230212_105435_alter_user_superuser.rs
