[package]
name = "gt-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
axum = { version = "0.6.2", features = [ "headers" ] }
chrono = "0.4.23"
dotenvy = "0.15.6"
futures = "0.3.25"
gt-core = { path = "../gt-core" }
http = "0.2.8"
hyper = { version = "0.14.23", features = ["full"] }
migration = { path = "../migration" }
pbkdf2 = "0.11.0"
sea-orm = { version = "0.10.6", features = [ "sqlx-sqlite", "runtime-tokio-rustls", "macros" ] }
serde = "1.0.152"
serde_json = "1.0.91"
thiserror = "1.0.38"
tokio = { version = "1.24.1", features = [ "full" ] }
tower = "0.4.13"
tower-cookies = "0.8.0"
tower-http = { version = "0.3.5", features = [ "fs", "auth" ] }
