[package]
name = "gt-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.23"
derive_more = "0.99.17"
serde = "1.0.152"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
sea-orm = { version = "0.10.6", features = [ "sqlx-sqlite", "runtime-tokio-rustls", "macros" ] }
