[package]
name = "gt-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
chrono = "0.4.23"
derive_more = "0.99.17"
num_enum = "0.5.9"
serde = "1.0.152"
hmac = "0.12.1"
jwt = "0.16.0"
sha2 = "0.10.6"
log = "0.4.17"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
sea-orm = { version = "0.10.6", features = [ "sqlx-sqlite", "runtime-tokio-rustls", "macros" ] }
